# ecsql

./: .gitignore  Makefile  README.org  clib.json  lisp-print-gdb.gdb  log.org
examples/: c-system.c  demo.lisp  planets-components.lisp  planets-scene.c  planets-scene.lisp  systems.lisp
graphs/: time-commits.gnu  time-commits.sh  time-lines.gnu  time-lines.sh
include/: arena.h  common.h  linalg.h
include/ecs/: ecs.h  ecs_internal.h  query.h
include/lisp/: lexer.h  lisp.h  memory.h  object.h  primitives.h  print.h  reader.h  systems.h  types.h
lisp/: builtin-structs.lisp  ecs.lisp  query.lisp  stdlib.lisp  struct.lisp  util.lisp
src/: CMakeLists.txt  arena.c  arena.h  common.h  eval.h  lexer.c  lexer.h  libgccjit-example.c  lisp.c  lisp.h  load.eld  load.lisp  main.c  memory.c  memory.h  object.h  primitives.c  primitives.h  print.c  print.h  reader.c  reader.h  struct.lisp  types.c  types.h  util.eld  util.lisp
src/ecs/: ecs.c  query.c
src/lisp/: arena.c  lexer.c  lisp.c  main.c  memory.c  object.h  primitives.c  print.c  print.h  reader.c  reader.h  systems.c  types.c  types.h
tests/: components.lisp  demo-queries.lisp  ecs-add*.lisp  get-relation.lisp  maths.lisp  presentation-code.lisp  structs.lisp  test-type-bsearch.c
